# Talky

./: .gitignore  Cargo.toml  LICENSE  README.md  audio.go  config.go  config.yaml  go.mod  go.sum  hotkeys.go  input.go  main.go  whisper.go
src/: audio.rs  clipboard.rs  config.rs  hotkeys.rs  main.rs  speech.rs
