[package]
name = "talky"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
cpal = "0.15.2"
hound = "3.5.0"
global-hotkey = "0.4.2"
winit = "0.29.3"
reqwest = { version = "0.11", features = ["multipart", "blocking"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
