[package]
name = "talky"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
ctrlc = "3.4"
global-hotkey = "0.4"
winit = "0.29"
cpal = "0.15.2"
hound = "3.5.1"
enigo = "0.3.0"
clipboard-rs = "0.2.4"
reqwest = { version = "0.11", features = ["multipart", "blocking"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
tempfile = "3.18.0"